Avoid useless jump
The last recommendation is about the Persistent Storage.

--- a/wiki/src/install/inc/stylesheets/steps.css
+++ b/wiki/src/install/inc/stylesheets/steps.css
@@ -48,6 +48,7 @@ div.success {
 div.success video {
   height: 200px;
   width: 200px;
+  padding-bottom: 10px;
 }
 
 div.success p.big {
